syntax = "proto3";

package scene_hunter.v1;

import "buf/validate/validate.proto";

option go_package = "github.com/yashikota/scene-hunter/server/gen/scene_hunter/v1;scene_hunterv1";

message UploadImageRequest {
  string room_code = 1 [(buf.validate.field).string = {pattern: "^[0-9]{6}$"}];
  bytes image_data = 2 [(buf.validate.field).bytes = {min_len: 1, max_len: 10485760}];
  string content_type = 3 [(buf.validate.field).string = {in: ["image/jpeg", "image/png", "image/webp"]}];
}

message UploadImageResponse {
  string image_id = 1 [(buf.validate.field).string.uuid = true];
  string image_path = 2;
}

service ImageService {
  rpc UploadImage(UploadImageRequest) returns (UploadImageResponse);
}
